--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,52 +4,73 @@
   --link: #61dafb;
   --text: hsla(0, 0%, 100%, 0.88);
 }
+body {
+  font-family: 'Lucida Sans', sans-serif;
+}
 
-header {
-  padding-top: 25px;
-  padding-bottom: 25px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--neutral-bg);
-  border-radius: 5px;
-  margin-top: 10px;
+.caprasimo-regular {
+  font-family: "Caprasimo", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.title-nav {
+  color: green;
+  padding-right: 5px;
+  padding-left: 20px;
+  font-size: 30px;
+  margin-right: 20%;
+  font-family: "Caprasimo";
+}
+
+.title {
+  color: green;
+  text-align: center;
+  font-size: 50px;
+  font-family: "Caprasimo";
 }
 
 .header {
   position: relative;
+  display: flex;
   left: 0;
   bottom: 10px;
   width: 100%;
   height: 30%;
-  background-color: #deeee2;
+  background-color: #f9f9f9;
   color: rgb(3, 3, 20);
-  text-align: center;
   border-radius: 5px;
   padding-bottom: 20px;
-  padding-top: 10px;
+  padding-top: 15px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.header-link {
-  color: black;
-  margin-left: 20px;
+.headerlinks {
   margin-right: 20px;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.2s ease;
+  display: flex;
+  gap: 20px;
 }
 
-.header-link:hover {
+.headerlink {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.headerlink:hover {
   color: #129f37;
 }
-
 
 .footer {
   position: relative;
   left: 0;
-  bottom: 20px;
+  bottom: 0;
   width: 100%;
-  background-color: #c9ead2;
+  background-color: #f9f9f9;
   color: rgb(3, 3, 20);
   text-align: center;
   border-radius: 5px;
@@ -67,7 +88,7 @@ header {
 }
 
 .card {
-  background-color: var(--card-bg);
+  background-color: white;
   padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgb(184, 233, 189);
@@ -78,14 +99,32 @@ header {
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px rgb(11, 112, 33);
+  box-shadow: 0 8px 16px green;
   transform: translateY(-5px);
 }
 
+.cardlist {
+  display: flex;
+  list-style: none;
+  margin: 2px;
+  padding: 2px;
+  gap: 6px;
+  vertical-align: middle;
+  justify-content: center;
+}
 .home h1 {
-  font-size: 50px;
-  color: #041d0a;
+  font-size: 75px;
+  color: #1ad342;
   text-align: center;
+  text-shadow: 2px 2px rgb(11, 79, 128);
+  word-spacing: 15px;
+}
+
+h2 {
+  font-size: 30px;
+  color: #1ec342;
+  text-align: center;
+  text-shadow: 1px 2px rgb(18, 87, 136);
 }
 
 .searchbar {
@@ -97,7 +136,7 @@ header {
 }
 
 .submit-button {
-  background-color: rgb(137, 235, 126);
+  background-color: rgb(168, 222, 162);
   color: black;
 }
 
@@ -120,18 +159,43 @@ header {
   box-shadow: 0 0 5px 2px #61dafb;
 }
 
-.modal {
-  z-index: 1;
-  background-color:rgb(11, 233, 59);
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 100%;
+section {
+  width: 90%;
+  margin: auto;
+  display: block;
+  box-sizing: inherit;
+  background-color: #f0f0f0;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.home h2.section-header {
+  text-align: left;
+}
+
+.section-title {
+  background: url("apartments.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 30vh;
+  padding: 30px;
+}
+
+.detail-image {
   width: 100%;
-  border: 50px solid rgba(190, 190, 190, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 400px;
+}
+
+.card-image {
+  width: auto;
+  height: 100%;
+  max-height: 130px;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
