--- a/client/src/index.css
+++ b/client/src/index.css
@@ -225,6 +225,12 @@ section {
   gap: 2 rem;
 }
 
+.new-listing-input[type=checkbox] {
+  margin-top: 13px;
+  width: 20px;
+  height: 20px;
+}
+
 input[type=text], select, textarea {
   width: 95%;
   padding: 12px;
@@ -260,6 +266,11 @@ input[type=submit] {
 
 input[type=submit]:hover {
   background-color: #45a049;
+}
+
+input[type=file] {
+  margin-top: 13px;
+  font-size: 18px;
 }
 
 .container {
