--- a/client/src/index.css
+++ b/client/src/index.css
@@ -85,6 +85,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
   margin-bottom: 20px;
+  padding-right: 2rem;
 }
 
 .card {
@@ -145,6 +146,7 @@ h2 {
 
 input#search {
   font-size: 30px;
+  width: auto;
 }
 
 .submit-button {
@@ -153,6 +155,15 @@ input#search {
   font-size: 18px;
   border-radius: 5px;
   cursor: pointer;
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+  &:not(:last-of-type) {
+    margin-left: 5px;
+  }
+  &:not(:first-of-type) {
+    margin-left: 5px;
+  }
 }
 
 .submit-button.sort-button {
